changes made in my html file

--- a/index.html
+++ b/index.html
@@ -59,23 +59,23 @@
 
 
                 <div class="col-md-3 eve2">
-                    <img src="css/images/image2.png" alt="image2" width="150" id="img2">
+                    <img src="css/images/award1.png" alt="image2" width="150" id="img2">
                     <div class="para1">
-                        <p id>Winners of 2019 restaurant awards</p>
+                        <p id>We won the wotld resruarant awards</p>
                     </div>
                 </div>
 
                 <div class="col-md-3 eve3">
-                    <img src="css/images/award3.jpeg" alt="award3" width="150" id="img3">
+                    <img src="css/images/award4.jpeg" alt="award3" width="150" id="img3">
                     <div class="para2">
-                        <p>Our branch become the runners up in the best restaurant awards</p>
+                        <p>Our reatuarant became the winner or the 2020 irish restuarant award</p>
                     </div>
                 </div>
 
                 <div class="col-md-3 eve4">
-                    <img src="css/images/award4.png" alt="award4" width="140" id="img4">
+                    <img src="css/images/award5.png" alt="award4" width="140" id="img4">
                     <div class="para3">
-                        <p>Winners of the 2018 nationals restaurant awards</p>
+                        <p>Winners of the wolt award 2019</p>
                     </div>
                 </div>
             </div>
@@ -112,8 +112,8 @@
         </footer>
 
     </div>
-    <script src="./Js/jquery-3.4.1.js"></script>
-    <script src="./Js/scripts.js"></script>
+    <script src="./js/jquery-3.4.1.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
