--- a/menu.html
+++ b/menu.html
@@ -41,17 +41,17 @@
 
             <div class="row pass">
                 <div class="col-md-4">
-                    <img src="css/images/pizza1.jpg" alt="" width="250" height="250" id="piz1">
+                    <img src="css/images/seafood1.jpg" alt="" width="250" height="250" id="piz1">
                     <p id="par1">Large size pizza with bacon toppings</p>
                 </div>
 
                 <div class="col-md-4">
-                    <img src="css/images/pizza2.webp" alt="" width="250" height="250" id="piz2">
+                    <img src="css/images/Vegan-Sausage-Pizza.jpg" alt="" width="250" height="250" id="piz2">
                     <p id="par2">Large pizza with tomato toppings spiced with black-berrys</p>
                 </div>
 
                 <div class="col-md-4">
-                    <img src="./images/pizza3.jpeg" alt="" width="250" height="250" id="piz3">
+                    <img src="css/images/pizza3.jpeg" alt="" width="250" height="250" id="piz3">
                     <p id="par3">Large pizza with sausage toppings with extra cheese</p>
                 </div>
 
@@ -169,8 +169,8 @@
 
     </div>
     </div>
-    <script src="./Js/jquery-3.4.1.js"></script>
-    <script src="./Js/scripts.js"></script>
+    <script src="./js/jquery-3.4.1.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
