--- a/contact.html
+++ b/contact.html
@@ -71,8 +71,8 @@
 
     </div>
 
-    <script src="./Js/jquery-3.4.1.js"></script>
-    <script src="./Js/scripts.js"></script>
+    <script src="./js/jquery-3.4.1.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 
 </html>
