a commit having chages made in my index.html file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
             <div class="logo">
-                <img src="css/images/pizza.jpg" alt="logo" width="150" height="120" id="log1">
+                <img src="css/images/logo.jpeg" alt="logo" width="150" height="120" id="log1">
 
                 <h1>Sweet Pizza</h1>
                 <p id="state">We give you what you want</p>
@@ -35,13 +35,13 @@
 
         <div class="histo">
             <h2>History</h2>
-            <p>Manger une pizza is a small family business that has been operating over three generations starting from 1960 to date with the aim of satisfying its customers with the best pizza. </p>
+            <p>Sweet pizza is a small family business that has been operating over three generations starting from 1960 to date with the aim of satisfying its customers with the best pizza. </p>
             <p>We started the business from a typical door to door services to now having different branches all over the country serving more than 3000 happy customers a week.</p>
 
             <div class="row rest">
-                <div class="col-md-4"><img src="css/images/restaurant 1.jpg" alt="" width="150" height="150" id="pic1"></div>
-                <div class="col-md-4"><img src="css/images/restaurant2.jpeg" alt="" width="150" height="150" id="pic2"></div>
-                <div class="col-md-4"><img src="css/images/restaurant3.jpg" alt="" width="150" height="150" id="pic3"></div>
+                <div class="col-md-4"><img src="css/images/index.jpeg" alt="" width="150" height="150" id="pic1"></div>
+                <div class="col-md-4"><img src="css/images/index3.jpeg" alt="" width="150" height="150" id="pic2"></div>
+                <div class="col-md-4"><img src="css/images/index2.jpeg" alt="" width="150" height="150" id="pic3"></div>
 
             </div>
         </div>
@@ -83,14 +83,14 @@
 
         <div class="branch">
             <h2>Branches</h2>
-            <p>Our branches are all over the country with our main branch in Nairobi westlands opposite Safaricom house. </p>
+            <p>Our branches are all over the country with our main branch in Kisumu  opposite  kisumu polytechnic. </p>
 
             <div class="row">
-                <div class="col-md-4"><img src="css/images/nairobi.jpg" alt="nairobi" width="250" height="250" id="img5"></div>
+                <div class="col-md-4"><img src="css/images/kisumu.jpeg" alt="nairobi" width="250" height="250" id="img5"></div>
 
-                <div class="col-md-4"><img src="css/images/mbs.jpeg" alt="mbs" width="250" height="250" id="img6"></div>
+                <div class="col-md-4"><img src="css/images/mombao.jpeg" alt="mbs" width="250" height="250" id="img6"></div>
 
-                <div class="col-md-4"><img src="css/images/kisumu.jpeg" alt="kisumu" width="250" height="250" id="img7"></div>
+                <div class="col-md-4"><img src="css/images/kericho.jpeg" alt="kisumu" width="250" height="250" id="img7"></div>
             </div>
 
         </div>
