--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="css/images/logo.jpeg" alt="logo" width="150" height="120" id="log1">
 
                 <h1>Sweet Pizza</h1>
-                <p id="state">We give you what you want</p>
+                <p id="state">We give you what you want!</p>
             </div>
         </div>
 
