changes made in my styles.css file

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
             <div class="logo">
-                <img src="css/images/pizza.jpg" alt="logo" width="150" height="120" id="log1">
+                <img src="css/images/logo.jpeg" alt="logo" width="150" height="120" id="log1">
 
                 <h1>Sweet Pizza</h1>
                 <p id="state">We give you what you want</p>
